syntax = "proto3";

message A {
  int32 a = 1;
}

message B {
  A a = 2;
}

message SubMessage {
  optional string value = 2;
}

message Message {
  string uid = 1;
  string value = 2;
}

message ObjReq {
  Message msg = 1;
  string flag_msg = 5;
}

service TestService {
   rpc TestException(ObjReq) returns (ObjReq);
}